style.css
body {
    width: 100%;
    height: 100%;
    margin: 0%;
    padding: 0%;
    background: rgb(5, 13, 19);
	background-size: cover;
    font-family: 'Josefin Sans', sans-serif;
    color: white;
    font-weight: bolder;
    text-align: center;
    align-items: center;
}

html {
    height: 100%;
    margin: 0%;
}
   
/* background image for homepage that only covers half the screen */
.bg {
    background-image: url("stars-1837306_1920.jpg");
    height: 50%; 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* top half of home page with animated pic and nav bar */
.bg .container {
    padding-top: 0.5rem;
    width: 100%;
    height: 100%;
}

.bg .container .heading {
    margin-top: 15%;
    margin-left: 35%;
    vertical-align: middle;
    font-family: 'Josefin Sans', sans-serif;
    text-shadow: 1px 1px 2px rgb(168, 101, 205), 0 0 1em rgb(213, 96, 224), 0 0 0.2em rgb(139, 52, 151);
    font-size: 52px;
    font-weight: 800;
    color: aliceblue;
}

/* navigation bar for home page */
.nav {
    overflow: hidden;
    display: flex;
    margin-left: 35%;
    align-items: center;
    text-align: center;
    font-weight: 800;
}

.navheader {
    width: 100%;
    height: 60px;
}

.menu {
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    list-style: none;
    padding: 0 100px;
}

.menu a {
	display: block;
    height: 100%;
    position: relative;
    display: flex;
    align-items: center;
 	justify-content: center;
    color: aliceblue;
    text-shadow: 0 0 15px white;
    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
    font-stretch: semi-condensed;
    text-decoration: none;
    text-align: center;
    padding: 10px 15px;
}

/* credit to https://dev.to/kiranrajvjd/10-simple-navigation-bar-hover-animations-1980 */
.menu a:after,
.menu a:before {
    content: "";
    position: absolute;
    display: block;
    border: 0px solid transparent;
    width: 0%;
    height: 0%;
    transition: all 0.5s ease;
}

.menu a:after {
    width: 0%;
    height: 0%;
    top: 0;
    left: 0;
    border-top: 2px solid transparent;
    border-left: 2px solid transparent;
}

.menu a:before {
    width: 0%;
    height: 0%;
    right: 0;
    bottom: 0;
    border-bottom: 2px solid transparent;
    border-right: 2px solid transparent;
}

.menu a:hover::before,
.menu a:hover::after {
    width: 100%;
    height: 100%;
    border-color: aliceblue;
}

.bg .center {
    position: absolute;
    transform: translate(0%, -90%);
    width: 40%;
    height: 55%;
    box-sizing: border-box;
}

/* animated image with code from MarioDesigns on https://codepen.io/MarioDesigns/pen/woJgeo */
.floatingImage {
	overflow: hidden;
    vertical-align: bottom;
    margin-left: 20%;
    margin-right: 20%;
    margin-top: 40%;
	width: 200px;
    height: 200px;
    box-sizing: border-box;
    border: 6px rgb(101, 68, 177);
    border-radius: 50%;
    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.6);
    transform: translatey(0px);
    animation: float 10s ease-in-out infinite;
}

img {
	width: 100%;
    height: 100%
}

.secondHeader {
    text-align: left;
    align-items: left;
    margin-left: 10%;
    margin-top: 5%;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 800;
    text-shadow: 1px 1px 2px rgb(168, 101, 205), 0 0 1em rgb(213, 96, 224), 0 0 0.2em rgb(139, 52, 151);
}

.par {
    text-align: left;
    align-items: left;
    margin-left: 10%;
    margin-right: 10%;
    margin-top: 5%;
    font-family: 'Josefin Sans', sans-serif;
}

@keyframes float {
	0% {
		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
		transform: translatey(0px);
	}
	50% {
		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
		transform: translatey(-20px);
	}
	100% {
		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
		transform: translatey(0px);
	}
}

